ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-ping-claim
      containers:
        - name: pingpong-container
          image: pingpong:latest 
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
