ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 4243
