ping_pong/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingpong-route
spec:
  parentRefs:
    - name: logoutput-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /ping
      backendRefs:
        - name: pingpong-svc
          port: 2347
          weight: 1
          namespace: default
